# Algoburn_V3

./: .gitignore  README.md  opencode.json
agent-api/: agent.py
contracts/: opencode.json
contracts/Algoburn/: .algokit.toml  README.md
contracts/Algoburn/projects/Algoburn/: README.md  pyproject.toml
contracts/Algoburn/projects/Algoburn/contracts/: AlgoBurn.arc56.json  algo_burn.py
contracts/Algoburn/projects/Algoburn/testnet-deploy/projects/testnet-deploy/: .algokit.toml  pyproject.toml
contracts/Algoburn/projects/Algoburn/tests/: test_algo_burn.py
credlyy/backend/: config.js  db.js  package-lock.json  package.json  server.js  test-sdk.js
credlyy/backend/algoburn-sdk/: index.js
credlyy/backend/middleware/: auth.js
credlyy/backend/routes/: auth.js  compliance.js  loan.js  users.js
credlyy/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
credlyy/frontend/src/: App.jsx  api.js  index.css
enterprise-api/: package-lock.json  server.js
frontend/: -files  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tatus
frontend/agent-api/: agent.py  requirements.txt
frontend/algoburn-sdk/: index.js  package-lock.json  package.json
frontend/credlyy-app/: package-lock.json
frontend/credlyy-app/credlyy-backend/: index.js  package-lock.json  package.json
frontend/credlyy-app/credlyy_frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/enterprise-api/: package.json
frontend/enterprise-api/public/: index.html
frontend/src/: App.jsx  algorandService.js
(+37 files in other folders)
